--- a/src/main/webapp/mesApplications.html
+++ b/src/main/webapp/mesApplications.html
@@ -1,10 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Antoine DUBUC | Developpeur en formation</title>
+  <link rel="shortcut icon" type="image/x-icon" href="img/Dub_transparent.png" />
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
-$END$
+
+<header>
+  <nav class="navbar">
+    <img src="img/Dub_transparent.png" alt="ImageDubDub" class="img-logo">
+    <a href="index.html" class="logo">Antoine DUBUC</a>
+    <p>Développeur en formation</p>
+    <div class="nav-link">
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li class="active"><a href="#">Mes Applications</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <img src="img/menu-btn-black.png" alt="bout hamburger" class="menu-hamburger">
+
+  </nav>
+</header>
+
+<div class="texteEnTeteCorps">
+  <p>"Mes Applications"</p>
+</div>
+
+<div class="corps">
+  <div  class="container">
+    <div  class="card">
+      <div class="card-top">
+        <img class="imgCard" src="img/Dub_PP.png" alt="image Dub">
+      </div>
+      <div class="card-info">
+        <h2 class="name">Application N°1</h2>
+        <h3 class="description">Super Appli :)</h3>
+        <p class="quote">"c'est application met en place un systeme de dingue"</p>
+      </div>
+      <div class="card-button">
+        <button>Vers l'application</button>
+      </div>
+    </div>
+  </div>
+
+  <div  class="container">
+    <div  class="card">
+      <div class="card-top">
+        <img class="imgCard" src="img/Dub_PP.png" alt="image Dub">
+      </div>
+      <div class="card-info">
+        <h2 class="name">Dev Art</h2>
+        <h3 class="description">Développeur Web</h3>
+        <p class="quote">Le ciel est bleu</p>
+      </div>
+      <div class="card-button">
+        <button>Vers l'application</button>
+      </div>
+    </div>
+  </div>
+
+  <div  class="container">
+    <div  class="card">
+      <div class="card-top">
+        <img class="imgCard" src="img/Dub_PP.png" alt="image Dub">
+      </div>
+      <div class="card-info">
+        <h2 class="name">Dev Art</h2>
+        <h3 class="description">Développeur Web</h3>
+        <p class="quote">Le ciel est bleu</p>
+      </div>
+      <div class="card-button">
+        <button>Vers l'application</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<footer class="footer">
+  <p>Copyright by DubDubToinou @ ENI 2022</p>
+</footer>
 </body>
-</html>
+
+<script>
+  const menuHamburger = document.querySelector(".menu-hamburger")
+  const navLinks = document.querySelector(".nav-link")
+
+  menuHamburger.addEventListener('click',()=>{
+    navLinks.classList.toggle('mobile-menu')
+  })
+
+</script>
+</html >
