Site web html CSS. web appli

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Antoine DUBUC | Developpeur en formation</title>
-    <link rel="shortcut icon" type="image/x-icon" href="img/Dub_transparent.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="ressources/img/Dub_transparent.png" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
 
 <header>
     <nav class="navbar">
-        <img src="img/Dub_transparent.png" alt="ImageDubDub" class="img-logo">
+        <img src="ressources/img/Dub_transparent.png" alt="ImageDubDub" class="img-logo">
         <a href="index.html" class="logo">Antoine DUBUC</a>
         <p>Développeur en formation</p>
         <div class="nav-link">
@@ -30,7 +30,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
-        <img src="img/menu-btn-black.png" alt="bout hamburger" class="menu-hamburger">
+        <img src="ressources/img/menu-btn-black.png" alt="bout hamburger" class="menu-hamburger">
 
     </nav>
 </header>
@@ -41,15 +41,15 @@
         <div  class="container">
             <div  class="card">
                 <div class="card-top">
-                    <img class="imgCard" src="img/Dub_PP.png" alt="image Dub">
+                    <img class="imgCard" src="ressources/img/Dub_PP.png" alt="image Dub">
                 </div>
                 <div class="card-info">
                     <h2 class="name">Application N°1</h2>
-                    <h3 class="description">Super Appli :)</h3>
-                    <p class="quote">"c'est application met en place un systeme de dingue"</p>
+                    <h3 class="description">ChiFouMi</h3>
+                    <p class="quote">"Jouez au jeu du ChiFouMi contre l'ordinateur"</p>
                 </div>
                 <div class="card-button">
-                    <button>Vers l'application</button>
+                    <a href="tpchifoumi/chifoumi.jsp" ><button>Vers l'application</button></a>
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
         <div  class="container">
             <div  class="card">
                 <div class="card-top">
-                    <img class="imgCard" src="img/Dub_PP.png" alt="image Dub">
+                    <img class="imgCard" src="ressources/img/Dub_PP.png" alt="image Dub">
                 </div>
                 <div class="card-info">
                     <h2 class="name">Dev Art</h2>
@@ -73,7 +73,7 @@
         <div  class="container">
             <div  class="card">
                 <div class="card-top">
-                    <img class="imgCard" src="img/Dub_PP.png" alt="image Dub">
+                    <img class="imgCard" src="ressources/img/Dub_PP.png" alt="image Dub">
                 </div>
                 <div class="card-info">
                     <h2 class="name">Dev Art</h2>
