Site web html CSS. web appli

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -60,12 +60,12 @@
                     <img class="imgCard" src="ressources/img/Dub_PP.png" alt="image Dub">
                 </div>
                 <div class="card-info">
-                    <h2 class="name">Dev Art</h2>
-                    <h3 class="description">Développeur Web</h3>
-                    <p class="quote">Le ciel est bleu</p>
+                    <h2 class="name">Application N°2</h2>
+                    <h3 class="description">Suivi Repas</h3>
+                    <p class="quote">"Application de suivi de repas."</p>
                 </div>
                 <div class="card-button">
-                    <button>Vers l'application</button>
+                    <a href="suiviDesRepas/Accueil.jsp" ><button>Vers l'application</button></a>
                 </div>
             </div>
         </div>
